crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_check_with_other_constraints@remove_check_with_other_constraints_remove_check_with_other_constraints_mysql.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE `users` DROP CHECK `chk_age`
