crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_check_with_unique_index@remove_check_with_unique_index_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "age" integer )
INSERT INTO "users_temp" ("id", "age") SELECT "id", "age" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
CREATE UNIQUE INDEX "idx_age" ON "users" ("age")
