crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_with_index@remove_foreign_key_with_index_remove_foreign_key_with_index_postgres.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE "posts" DROP CONSTRAINT "fk_user"
