crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_with_other_constraints@remove_foreign_key_with_other_constraints_MySql.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE `posts` DROP FOREIGN KEY `fk_user`
