crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_with_unique_constraint@remove_foreign_key_with_unique_constraint_MySql.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
ALTER TABLE `posts` DROP FOREIGN KEY `fk_posts__fk_user`
