crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint_foreign_key_with_unique_constraint@remove_foreign_key_with_unique_constraint_Sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "posts_temp" ( "id" integer NOT NULL, "user_id" integer )
INSERT INTO "posts_temp" ("id", "user_id") SELECT "id", "user_id" FROM "posts"
DROP TABLE "posts"
ALTER TABLE "posts_temp" RENAME TO "posts"
CREATE UNIQUE INDEX "uq_posts__uq_user_id" ON "posts" ("user_id")
